<resources>
    <string name="app_name">Q7</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="dob">Date of birth</string>
    <string name="blood">Blood type</string>
    <string name="desease">Congenital desease</string>
    <string name="reg_dosing">Regular dosing</string>
    <string name="drug_allergy">Drug allergy</string>
    <string name="hospital">Hospital</string>
    <string name="contact">Contact</string>

    <string name="name_p1">Christopher Hudson</string>
    <string name="firs_tname_p1">Christopher</string>
    <string name="last_name_p1">Hudson</string>
    <string name="des_p1">09/02/2010, AB+, G6PD</string>
    <string name="dob_p1">09/02/2010</string>
    <string name="blood_p1">AB+</string>
    <string name="desease_p1">G5PD</string>
    <string name="reg_dosing_p1">-</string>
    <string name="drug_allergy_p1">Furazolidone</string>
    <string name="hospital_p1">Bangpakok Hospital</string>
    <string name="contact_p1">089-111-1234</string>

    <string name="pinfo_menu_1">Last treat</string>
    <string name="pinfo_menu_2">Purchase QR tag</string>
</resources>
